fix Search log modal size on mobile

--- a/public/styles/_modal.scss
+++ b/public/styles/_modal.scss
@@ -28,3 +28,9 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .search-logs-modal {
+    min-width: 80%;
+  }
+}
